receiving h3 indices from backend, with local fake data
